--- a/fedgehundui/styles/navbar.css
+++ b/fedgehundui/styles/navbar.css
@@ -12,17 +12,13 @@
 	background: transparent !important; /* Optional: just make scrollbar invisible */
 }
 
+.navbar {
+	max-width: 100vw !important;
+}
+
 @media (max-width: 580px) {
 	.lookup_form_everywhere {
 		display: none;
-	}
-
-	#menuToggle#menuToggle#menuToggle {
-		right: 15px;
-	}
-
-	#menu#menu#menu {
-		right: -75px;
 	}
 }
 
@@ -31,9 +27,13 @@
 		display: none;
 	}
 
+	.navbar.navbar.navbar {
+		max-width: 100vw !important;
+	}
+
 	.lookup_form_everywhere.lookup_form_everywhere.lookup_form_everywhere {
 		margin-left: 50px;
-		margin-right: 100px;
+		margin-right: 90px;
 	}
 
 	#menuToggle#menuToggle {
@@ -339,9 +339,9 @@ a {
 }
 
 .hamburger_container {
-	height: 800px;
+	height: 100vh;
 	overscroll-behavior: contain;
-	overflow-x: hidden;
+	overflow-x: hidden !important;
 }
 
 .menu_box {
